--- a/Tests.SpecRun/Tests.SpecRun.csproj
+++ b/Tests.SpecRun/Tests.SpecRun.csproj
@@ -16,11 +16,11 @@
     <PackageReference Include="Castle.Core" Version="4.3.1" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
-    <PackageReference Include="SpecFlow" Version="2.*" />
+    <PackageReference Include="SpecFlow" Version="3.0.213" />
     <PackageReference Include="SpecFlow.SharedSteps" Version="2.0.1" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="2.4.0" />
-    <PackageReference Include="SpecRun.Runner" Version="1.8.2" />
-    <PackageReference Include="SpecRun.SpecFlow" Version="1.8.2" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.213" />
+    <PackageReference Include="SpecRun.Runner" Version="3.0.337" />
+    <PackageReference Include="SpecRun.SpecFlow" Version="3.0.337" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Allure.Commons\Allure.Commons.csproj" />
@@ -28,6 +28,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="allureConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Default.srprofile">
